# cvtailor

./: README.md  app.py  pyproject.toml
data/: sample_cv.txt
data/cv/: base_cv.yaml
src/cvtailor/: config.py  gemini_service.py  models.py  pdf.py  tailoring.py
templates/: cv.tex.j2
